--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,17 @@
 <main>
-  <app-navbar></app-navbar>
+  <nav class="navbar navbar-expand-sm bg-light fixed-top">
+    <a class="navbar-brand" href="#">
+      <img src="assets/logo.png" alt="Logo" style="width:32px;">
+    </a>
+
+    <!-- Links -->
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/snippets" routerLinkActive="active">Snippets</a>
+      </li>
+    </ul>
+
+  </nav>
   <div class="container">
     <app-snippets></app-snippets>
   </div>
