start snippet of day

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,9 @@
     <!-- Links -->
     <ul class="navbar-nav">
       <li class="nav-item">
+        <a class="nav-link" routerLink="/snippet-of-day" routerLinkActive="active">Snippets</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" routerLink="/snippets" routerLinkActive="active">Snippets</a>
       </li>
     </ul>
