--- a/src/app/components/snippet-of-day/snippet-of-day.component.html
+++ b/src/app/components/snippet-of-day/snippet-of-day.component.html
@@ -1,7 +1,8 @@
 <h1>Snippet of the day</h1>
 <div class="card mb-3">
   <h3 class="card-header">{{snippet.title}}</h3>
-  <div class="card-body p-0" [innerHTML]="snippet.highlighted | safeHtml">
+  <div class="card-body p-0">
+    <img src="{{'data:image/jpg;base64,' + snippet.highlighted}}" alt="Red dot" />
   </div>
   <div class="card-footer">Footer</div>
 </div>
