--- a/src/app/components/snippets/snippets.component.html
+++ b/src/app/components/snippets/snippets.component.html
@@ -1,6 +1,9 @@
-<div class="card mb-3" *ngFor="let snippet of snippets">
-  <h3 class="card-header">{{snippet.title}}</h3>
-  <div class="card-body p-0" [innerHTML]="snippet.highlighted | safeHtml">
-  </div>
-  <div class="card-footer">Footer</div>
+<div class="card-columns">
+  <div class="card" *ngFor="let snippet of snippets">
+      <h3 class="card-header">{{snippet.title}}</h3>
+      <div class="card-body p-0">
+        <img src="{{'data:image/jpg;base64,' + snippet.highlighted}}" alt="Red dot" />
+      </div>
+      <div class="card-footer">Footer</div>
+    </div>
 </div>
