--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,10 +7,28 @@
     <!-- Links -->
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" routerLink="/snippet-of-day" routerLinkActive="active">Snippet of the day</a>
+        <a class="nav-link" routerLink="/users" routerLinkActive="active">Heros</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="/snippets" routerLinkActive="active">All Snippets</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" (click)="logout()">Logout</a>
+      </li>
+    </ul>
+
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item dropdown" *ngIf="currentUser">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          {{currentUser.username}}
+        </a>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+          <a class="dropdown-item" (click)="logout()">Logout</a>
+        </div>
+      </li>
+
+      <li class="nav-item" *ngIf="currentUser == null">
+        <a class="nav-link" routerLink="/login" routerLinkActive="active">login</a>
       </li>
     </ul>
 
