--- a/src/app/components/snippets/snippets.component.html
+++ b/src/app/components/snippets/snippets.component.html
@@ -1,9 +1,5 @@
-<div class="card-columns">
-  <div class="card" *ngFor="let snippet of snippets">
-      <h3 class="card-header">{{snippet.title}}</h3>
-      <div class="card-body p-0">
-        <img src="{{'data:image/jpg;base64,' + snippet.highlighted}}" alt="Red dot" />
-      </div>
-      <div class="card-footer">Footer</div>
-    </div>
+<div class="card-deck">
+  <ng-template ngFor let-snippet [ngForOf]="snippets">
+    <app-snippet-detail  [snippet]="snippet" ></app-snippet-detail>
+  </ng-template>
 </div>
