--- a/src/app/components/snippet-detail/snippet-detail.component.html
+++ b/src/app/components/snippet-detail/snippet-detail.component.html
@@ -1,21 +1,17 @@
-<div class="card" *ngIf="snippet">
-  <div class="card-body p-0">
-    <h4 class="card-title mt-3 mx-3 m-0">{{snippet.title}}</h4>
-    <img src="{{'data:image/jpg;base64,' + snippet.highlighted}}" alt="code" style="width:100%" />
+<h4>{{snippet.title}}</h4>
+<img src="{{'data:image/jpg;base64,' + snippet.highlighted}}" alt="code" style="max-width:100%" class="img-fluid"/>
+<p class="m-0 p-0">
+<a routerLink="/snippets/{{snippet.id}}" class="text-decoration-none text-muted small m-1">
+  Likes <span class="badge">{{snippet.count_likes}}</span> - Comments <span class="badge">{{snippet.count_comments}}</span>
+</a>
+</p>
 
-    <div class="btn-group btn-group-sm" style="width:100%">
-      <a type="button" class="btn btn-outline-primary">
-        {{snippet.user.username}}
-      </a>
-      <a *ngIf="!id" routerLink="/snippets/{{snippet.id}}" type="button" class="btn btn-outline-primary">
-        Comments <span class="badge">{{snippet.count_comments}}</span>
-      </a>
-      <button *ngIf="id" (click)="goBack()" type="button" class="btn btn-outline-primary">
-        Back
-      </button>
-      <button (click)="like()" type="button" class="btn btn-outline-primary">
-        Likes <span class="badge">{{snippet.count_likes}}</span>
-      </button>
-    </div>
-  </div>
+<div class="btn-group btn-group-sm">
+  <button class="btn btn-outline-secondary" (click)="like()">
+    <i class="fa fa-thumbs-up"></i>
+  </button>
+  <a *ngIf="!id" routerLink="/snippets/{{snippet.id}}" type="button" class="btn btn-outline-secondary">
+    <i class="fa fa-comments-o"></i>
+  </a>
 </div>
+<hr class="m-4">
