--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,9 @@
     </ul>
 
   </nav>
-  <div class="container pt-3">
-    <router-outlet></router-outlet>
-  </div>
+  <div class="row">
+    <div class="col-md-3"></div>
+  <div class="col-md-6"><router-outlet></router-outlet></div>
+  <div class="col-md-3"></div>
+</div>
 </main>
