--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,10 @@
 <main>
   <nav class="navbar navbar-expand-sm bg-light fixed-top">
-    <a class="navbar-brand" href="#">
-      <img src="assets/logo.png" alt="Logo" style="width:32px;">
+    <a class="navbar-brand" routerLink="/snippets" routerLinkActive="active">
+      Full Stack Hero
     </a>
 
     <!-- Links -->
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/users" routerLinkActive="active">Heros</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/snippets" routerLinkActive="active">Snippets</a>
-      </li>
-    </ul>
-
     <ul class="navbar-nav ml-auto">
       <li class="nav-item dropdown" *ngIf="currentUser">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -34,9 +25,7 @@
     </ul>
 
   </nav>
-  <div class="row">
-    <div class="col-md-3"></div>
-  <div class="col-md-6"><router-outlet></router-outlet></div>
-  <div class="col-md-3"></div>
-</div>
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
 </main>
