--- a/src/app/components/snippet-detail/snippet-detail.component.html
+++ b/src/app/components/snippet-detail/snippet-detail.component.html
@@ -1,17 +1,21 @@
-<h4>{{snippet.title}}</h4>
-<img src="{{'data:image/jpg;base64,' + snippet.highlighted}}" alt="code" style="max-width:100%" class="img-fluid"/>
-<p class="m-0 p-0">
-<a routerLink="/snippets/{{snippet.id}}" class="text-decoration-none text-muted small m-1">
-  Likes <span class="badge">{{snippet.count_likes}}</span> - Comments <span class="badge">{{snippet.count_comments}}</span>
-</a>
-</p>
+<div *ngIf="snippet">
+  <h2 class="m-0 text-dark">{{snippet.title}}</h2>
+  <p class="text-dark">{{snippet.description}}</p>
+  <div class="text-center">
+    <img src="{{'data:image/jpg;base64,' + snippet.highlighted}}" alt="code" style="max-width:100%" class="shadow rounded"/>
+  </div>
+  <p class="m-0 p-0 text-dark">
+      Likes <span class="badge">{{snippet.count_likes}}</span> - Comments <span class="badge">{{snippet.count_comments}}</span>
+      <span class="float-right">by {{snippet.user.username}} </span>
+  </p>
 
-<div class="btn-group btn-group-sm">
-  <button class="btn btn-outline-secondary" (click)="like()">
-    <i class="fa fa-thumbs-up"></i>
-  </button>
-  <a *ngIf="!id" routerLink="/snippets/{{snippet.id}}" type="button" class="btn btn-outline-secondary">
-    <i class="fa fa-comments-o"></i>
-  </a>
+  <div class="btn-group btn-group-sm">
+    <button class="btn btn-outline-secondary" (click)="like()">
+      <i class="fa fa-thumbs-up"></i>
+    </button>
+    <a routerLink="/snippets/{{snippet.id}}" type="button" class="btn btn-outline-secondary">
+      <i class="fa fa-comments"></i>
+    </a>
+  </div>
+  <hr class="m-4">
 </div>
-<hr class="m-4">
