--- a/src/app/components/snippets/snippets.component.html
+++ b/src/app/components/snippets/snippets.component.html
@@ -1,3 +1,24 @@
-<div *ngFor="let snippet of snippets" class="container-fluid">
-  <app-snippet-detail [snippet]="snippet" ></app-snippet-detail>
+<div class="col-sm-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2 col-xl-6 offset-xl-3">
+  <div *ngFor="let snippet of snippets" class="container-fluid">
+    <a routerLink="/snippets/{{snippet.id}}" class="text-decoration-none text-muted small m-0 p-0">
+      <h2 class="m-0 text-dark">{{snippet.title}}</h2>
+      <p *ngIf="id" class="text-dark">{{snippet.description}}</p>
+      <div class="text-center">
+        <img src="{{'data:image/jpg;base64,' + snippet.highlighted}}" alt="code" style="max-width:100%" class="shadow rounded"/>
+      </div>
+      <p class="m-0 p-0 text-dark">
+          Likes <span class="badge">{{snippet.count_likes}}</span> - Comments <span class="badge">{{snippet.count_comments}}</span>
+          <span class="float-right">by {{snippet.user.username}} </span>
+      </p>
+    </a>
+    <div class="btn-group btn-group-sm">
+      <button class="btn btn-outline-secondary" (click)="like()">
+        <i class="fa fa-thumbs-up"></i>
+      </button>
+      <a routerLink="/snippets/{{snippet.id}}" type="button" class="btn btn-outline-secondary">
+        <i class="fa fa-comments"></i>
+      </a>
+    </div>
+    <hr class="m-4">
+  </div>
 </div>
